fix table overflow

--- a/assets/styles/buefy.scss
+++ b/assets/styles/buefy.scss
@@ -48,3 +48,7 @@ $link-focus-border: $primary;
     min-height: auto !important;
   }
 }
+
+.b-table {
+  overflow: auto;
+}
